# snail

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  electron-builder.yml  electron-vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
.github/workflows/: release.yml
src/main/: index.ts  ipc-handlers.ts
src/native/: CMakeLists.txt
src/native/src/: addon.cpp  correlation_engine.cpp  correlation_engine.h  fft_engine.cpp  fft_engine.h  filter_engine.cpp  filter_engine.h  input_source.cpp  input_source.h  sigmf_parser.cpp  sigmf_parser.h  sigmf_writer.cpp  sigmf_writer.h  spectrogram_worker.cpp  spectrogram_worker.h
src/preload/: index.ts
src/renderer/: App.tsx  env.d.ts  index.html
src/renderer/components/: AnnotationDialog.tsx  ConstellationWindow.tsx  ControlsPanel.tsx  CorrelationDialog.tsx  CorrelationPane.tsx  CorrelationPlot.tsx  CursorOverlay.tsx  ExportDialog.tsx  FFTWindow.tsx  FrequencyAxis.tsx  ScrollBar.tsx  SpectrogramView.tsx  StatusBar.tsx  TimeAxis.tsx  Toolbar.tsx  TracePlot.tsx
src/renderer/hooks/: useCorrelation.ts  useCursors.ts  useFileLoader.ts  useSpectrogram.ts
src/renderer/state/: store.ts
src/renderer/styles/: global.css  theme.ts
src/renderer/utils/: pulseDetect.ts
src/renderer/webgl/: ColorMap.ts  SpectrogramRenderer.ts  TileCache.ts
src/renderer/webgl/shaders/: spectrogram.frag  spectrogram.vert
src/shared/: ipc-channels.ts  sample-formats.ts  units.ts
test/fixtures/: generate_chirps.py  generate_lora.py
